final-project/kubernetes/kong/security.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-auth
  namespace: meshcommerce
  annotations:
    konghq.com/plugins: meshcommerce-correlation-id
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /gateway/auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-api
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-secure-orders
  namespace: meshcommerce
  annotations:
    konghq.com/plugins: meshcommerce-correlation-id,meshcommerce-jwt,meshcommerce-orders-operator
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /gateway/secure
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-api
                port:
                  number: 8080
